--- a/index.html
+++ b/index.html
@@ -7,6 +7,36 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <nav>
+        <p>Neighborhoods</p>
+        <p>Reviews</p>
+        <p>Restraunts</p>
+        <p>Dublin Guides</p>
+        <p>Travel Guides</p>
+        <p>What's New</p>
+        <p>All News</p>
+    </nav>
+    <div class="content">
+    <div class="first">
+        <h2>The Art of Pastry</h2>
+        <h4>Pastry was originally used as a container for filling, not as a sweet treat.</h4>
+        <button>Read more</button>
+    </div>
+    <div class="second">
+        <h1>Where to <br> Eat & Drink <br> in Dublin</h1>
+    </div>
+    </div>
+    <div class="content">
+    <div class="third">
+        <h2>Croissant Craze</h2>
+        <h4>Croissants are made with layers of dough and butter, creating the flaky texture.</h4>
+        <button>Read more</button>
+    </div>
+    <div class="fourth">
+        <h2>Glazed and Amazed</h2>
+        <h4>National Donut Day is celebrated on the first Friday of June.</h4>
+        <button>Read more</button>
+    </div>
+    </div>
 </body>
 </html>
